syntax = "proto3";

package greet;

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetManyTimesRequest{
    Greeting greeting =1;
}

message GreetManyTimesResponse {
    string result = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}
message LongGreetResponse {
    string result = 1;
}


service GreetService {
    //server stream  
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse){};
    //client stream  
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse){};
}